contribuninja page points to github, register php fixed

--- a/website/contribuninja.html
+++ b/website/contribuninja.html
@@ -4,10 +4,10 @@
 </head>
 <body>
 <h2>Contribute</h2>
-<p>We are in the process of setting up a collaborative editing system on GitHub. This should be online soon. 
-Follow <a href="http://twitter.com/cuke4ninja">cuke4ninja</a> on Twitter to get notified when that happens.</p>
+<p>You can fork and extend the document on <a href="http://github.com/davedf/cuke4ninja">GitHub</a>.
+</p>
 <p>
-For now, you can provide feedback on the <a target="_blank" href="http://getsatisfaction.com/cuke4ninja/">Cuke4Ninja Get Satisfaction site</a>.</p>
+You can provide feedback on the <a target="_blank" href="http://getsatisfaction.com/cuke4ninja/">Cuke4Ninja Get Satisfaction site</a>.</p>
 </p>
 </body>
 </html>
