added a section on comparison to other tools, website build tweaks, embed files works with macos or linux

--- a/website/download.html
+++ b/website/download.html
@@ -6,7 +6,7 @@
 <h2>Download</h2>
 <ul>
 <li><a href="download-pdf.php">Download the document as PDF</a></li>
-<li><a href="download-source.php">Download the source code for the examples</a></li>
+<li><a href="http://github.com/davedf/cuke4ninja/tree/master/src/">Download the source code for the examples</a></li>
 </ul>
 </body>
 </html>
