--- a/website/download.html
+++ b/website/download.html
@@ -10,52 +10,7 @@
 </ul>
 
 <h2>Register to get updates and notifications</h2>
-<p><i>Your contact details will be used only for notifications about book updates 
-and related events. They will not be passed on to any third party or used 
-for any other purpose. </i></p>
-<table>
-<form method="post" action="register.php">
-<tr>
-<td width="250">Name:</td>
-<td>
-<input type="text" name="name" /></td>
-</tr>
-<tr>
-<td>Company:</td>
-<td>
-<input type="text" name="company" /></td>
-</tr>
-<tr>
-<td>E-mail:</td>
 
-<td>
-<input type="text" name="email" /></td>
-</tr>
-<tr>
-<td colspan="2">David and Gojko run <a target="_blank" href="/training">public and on-site workshops</a> 
-that help teams get started with Cucumber, BDD, agile acceptance testing and specification by example. </td>
-</tr>
-<tr>
-<td>Tell me more about the training opportunities:</td>
-<td>
-<input type="checkbox" name="training" value="training"/></td>
-</tr>
-<tr>
-<tr>
-<td>Telephone (incl international code):</td>
-<td>
-<input type="text" name="phone" /></td>
-</tr>
-<td valign="top">Any other comments?</td>
-<td><textarea style="width:250px" name="comments"></textarea></td>
-</tr>
-<tr>
-<td>
-<input type="submit" value="register" /></td>
-</tr>
-</form>
-</table>
+<a href="http://groups.google.com/group/cuke4ninja-updates/subscribe">Join our mailing list to get notified when the book is updated</a>
 
 
-</body>
-</html>
